# ROS2_

./: README.md
ros_interfaces/: CMakeLists.txt  package.xml
ros_interfaces/msg/: DetectedObject.msg  ProcessingData.msg
thallos_ros/: package.xml  setup.cfg  setup.py
thallos_ros/launch/: thallos_launch.py
thallos_ros/thallos_ros/: camera_publisher_node.py  object_detection_processing_node.py  ui_display_node.py
